@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<values>
+    <firstValue>17 bananas</firstValue>
+    <secondValue value="100"/>
+    <thirdValue>33</thirdValue>
+</values>
